kube/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: frontend
  labels:
    app: frontend-nextjs
spec:
  type: ClusterIP
  selector:
    app: frontend-nextjs
    tier: web
  ports:
    - port: 80
      targetPort: 3000
